feat: add i18n & rules

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -33,5 +33,8 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+
+button {
+  padding: 2px 8px 2px 8px;
 }
